2010-07-09  Leon Clarke  <leonclarke@google.com>

        Reviewed by Adam Barth.

        add support for link prefetching
        https://bugs.webkit.org/show_bug.cgi?id=3652

        * public/WebURLRequest.h:
        (WebKit::WebURLRequest::):

2010-07-09  Michael Nordman  <michaeln@google.com>

        Reviewed by Dumitru Daniliuc.

        Use class ProgressEvent when raising appcache related progress events and
        set the 'total', 'loaded', and 'lengthComputable' attributes.
        Also raise the final progress event with the 'total' and 'loaded' attribute
        values are equal to one another to keep pace with the spec for this feature.
        https://bugs.webkit.org/show_bug.cgi?id=37602

        * src/ApplicationCacheHost.cpp:
        (WebCore::ApplicationCacheHost::notifyDOMApplicationCache):
        (WebCore::ApplicationCacheHost::stopDeferringEvents):
        (WebCore::ApplicationCacheHost::dispatchDOMEvent):
        * src/ApplicationCacheHostInternal.h:
        (WebCore::ApplicationCacheHostInternal::notifyEventListener):
        (WebCore::ApplicationCacheHostInternal::notifyProgressEventListener):

2010-07-09  David Holloway  <dhollowa@chromium.org>

        Reviewed by Dimitri Glazkov.

        Roll Chromium DEPS forward to r51736.
        https://bugs.webkit.org/show_bug.cgi?id=41867

        * DEPS:

2010-07-09  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: chromium build fix.

        * public/WebGLES2Context.h:

2010-07-09  Yael Aharon  <yael.aharon@nokia.com>

        Reviewed by Laszlo Gombos.

        NotificationPresenter needs a cancelRequestPermission API
        https://bugs.webkit.org/show_bug.cgi?id=41783

        Updated the NotificationPresenter API.

        * src/NotificationPresenterImpl.cpp:
        (WebKit::NotificationPresenterImpl::checkPermission):
        (WebKit::NotificationPresenterImpl::requestPermission):
        * src/NotificationPresenterImpl.h: